--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
@@ -766,7 +766,7 @@
                         <button href="#" type="button" title="{{ 'field_type.json_menu_editor.collapse_button'|trans }}" aria-expanded="{{  defaultClose ? 'true' : 'false' }}" class="btn btn-default button-collapse"></button>
                         &nbsp;
                     {% endif %}
-                    {% if item.contentType is defined %}<i class="{{ item.contentType|get_content_type.icon|default('') }}"></i>{% endif %}
+                    {% if item.contentType is defined %}<i class="{{ item.contentType|emsco_get_content_type.icon|default('') }}"></i>{% endif %}
                     {% if nestedIcons is defined and attribute(nestedIcons, item.type) is defined %}
                         <i class="{{ attribute(nestedIcons, item.type) }}"></i>
                     {% endif %}
@@ -1005,15 +1005,16 @@
         </dt>
         <dd>
             <ul>
-                {%  set contentType = dataField.fieldType.displayOptions.json_menu_content_type|default('')|get_content_type %}
+                {%  set contentType = dataField.fieldType.displayOptions.json_menu_content_type|default('')|emsco_get_content_type %}
                 {% set choices = {} %}
                 {% set labels = {} %}
                 {% if contentType %}
-                    {%  set hits = {
-                        index: contentType.environment.alias,
-                        type: contentType.name,
-                        body: dataField.fieldType.displayOptions.query|default('{}')
-                    }|search.hits.hits %}
+                    {%  set hits = emsco_search(
+                        contentType.environment.alias,
+                        dataField.fieldType.displayOptions.query|default('{}'),
+                        contentType.name,
+                        20,
+                    ).response.data.hits.hits %}
                     {%  for hit in hits %}
                         {% set label = attribute(hit._source, contentType.labelField|default(false))|default(hit._id) ~ ' /'  %}
                         {% set choices = choices|merge([hit._id]) %}
@@ -1035,7 +1036,7 @@
 
 {% block EMS_CoreBundle_Form_DataField_JsonMenuNestedLinkFieldType %}
     {%- set doCompare = compare and dataField.rawData|json_encode is not same as( (attribute(compareRawData, dataField.fieldType.name) is defined?attribute(compareRawData, dataField.fieldType.name):null)|json_encode  )  -%}
-    {%- set color = not doCompare ? '' : not dataField.rawData ? 'bg-red' : not compareRawData|get_string(dataField.fieldType.name) ? 'bg-green' : 'bg-orange' -%}
+    {%- set color = not doCompare ? '' : not dataField.rawData ? 'bg-red' : not compareRawData|emsco_get_string(dataField.fieldType.name) ? 'bg-green' : 'bg-orange' -%}
     {%- set displayOptions = dataField.fieldType.options.displayOptions -%}
     {%- set jmnField = displayOptions.json_menu_nested_field|default(false) -%}
     {%- set jmnQuery = displayOptions.query|default(false) -%}
@@ -1046,7 +1047,12 @@
         {% else %}
             {% set index = dataField.fieldType.contentType.environment.alias %}
         {% endif %}
-        {%- set hits = { index: index, body: jmnQuery}|search.hits.hits -%}
+        {%-  set hits = emsco_search(
+            index,
+            jmnQuery,
+            [],
+            20,
+        ).response.data.hits.hits -%}
         {%- set structures = [] -%}
         {%- for h in hits -%}
             {% set structures = structures|merge([{
@@ -1054,7 +1060,7 @@
                 'type': h._source._contenttype,
                 'label': h._source._contenttype,
                 'object': h._source|filter((v, k) => k != jmnField),
-                'children': attribute(h._source, jmnField)|default('{}')|json_decode
+                'children': attribute(h._source, jmnField)|default('{}')|ems_json_decode
             }]) %}
         {%- endfor -%}
         {%- set jmnMenu = structures|json_encode|ems_json_menu_nested_decode -%}
@@ -1064,7 +1070,7 @@
         {%- endfor -%}
 
         {% if displayOptions.choices_template|default(false) %}
-            {% set choices = displayOptions.choices_template|generate_from_template({ 'items': items })|json_decode %}
+            {% set choices = displayOptions.choices_template|emsco_generate_from_template({ 'items': items })|ems_json_decode %}
         {% else %}
             {%- set choices = [] -%}
             {%- for item in items -%}
@@ -1079,7 +1085,7 @@
     <dl>
         <dt>
             {%- if displayOptions.label is defined -%}
-                {{- displayOptions.label -}}{%- if is_super() -%}({{- dataField.fieldType.name -}}){%- endif -%}
+                {{- displayOptions.label -}}{%- if emsco_is_super() -%}({{- dataField.fieldType.name -}}){%- endif -%}
             {%- else -%}
                 {{- dataField.fieldType.name-}}
             {%- endif -%}
@@ -1095,18 +1101,18 @@
                         <div class="col-md-6 bg-gray-light">
                             {%- if compareRawData -%}
                                 {%- set compareData = choices|default([])|filter( (id, label) => compareRawData is iterable ? id in compareRawData : id == compareRawData) -%}
-                                {{- displayOptions.display_template|generate_from_template({ data: compareData, dataField: dataField, choices: choices })|raw -}}
+                                {{- displayOptions.display_template|emsco_generate_from_template({ data: compareData, dataField: dataField, choices: choices })|raw -}}
                             {%- endif -%}
                         </div>
                         <div class="col-md-6 bg-gray-light">
-                            {{- displayOptions.display_template|generate_from_template({ data: data, dataField: dataField, choices: choices })|raw -}}
+                            {{- displayOptions.display_template|emsco_generate_from_template({ data: data, dataField: dataField, choices: choices })|raw -}}
                         </div>
                     </div>
                 {%- else -%}
-                    {{- displayOptions.display_template|generate_from_template({ data: data, dataField: dataField, choices: choices|default([]) })|raw -}}
+                    {{- displayOptions.display_template|emsco_generate_from_template({ data: data, dataField: dataField, choices: choices|default([]) })|raw -}}
                 {%- endif -%}
             {%- else -%}
-                {%- set diffChoice = diff_choice(dataField.rawData, choiceLabels|default([]), choiceValues|default([]), compare, dataField.fieldType.name, compareRawData) -%}
+                {%- set diffChoice = emsco_diff_choice(dataField.rawData, choiceLabels|default([]), choiceValues|default([]), compare, dataField.fieldType.name, compareRawData) -%}
                 {%- if displayOptions.multiple|default(false) -%}
                     <ul>{{ diffChoice|raw }}</ul>
                 {%- else -%}
@@ -1256,7 +1262,7 @@
                         <b>Duration </b>
                         {% if compare %}
                             {% if attribute(child, dataField.fieldType.mappingOptions.fromDateMachineName) is defined and attribute(child, dataField.fieldType.mappingOptions.toDateMachineName) is defined %}
-                                {{ emsco_diff(dateFrom|emsco_date_difference(dateTo, dataField.fieldType.displayOptions.timePicker), attribute(child, dataField.fieldType.mappingOptions.fromDateMachineName)|date_difference(attribute(child, dataField.fieldType.mappingOptions.toDateMachineName), dataField.fieldType.displayOptions.timePicker), compare, true) }}
+                                {{ emsco_diff(dateFrom|emsco_date_difference(dateTo, dataField.fieldType.displayOptions.timePicker), attribute(child, dataField.fieldType.mappingOptions.fromDateMachineName)|emsco_date_difference(attribute(child, dataField.fieldType.mappingOptions.toDateMachineName), dataField.fieldType.displayOptions.timePicker), compare, true) }}
                             {% else %}
                                 <span class="text-green"><ins class="diffmod">{{ dateFrom|emsco_date_difference(dateTo, dataField.fieldType.displayOptions.timePicker) }}</ins></span>
                             {% endif %}
