refactor: revision dashboard use dataTableFactory
- The taskManager does not need to build the table anymore
- The entity tableTaskService could be removed
- Add a new Query dataTable for querying all tasks (not possible with orm)
- Removed dataTable routes from TaskController (is now generic DataTablesController)

--- a/EMS/core-bundle/src/Resources/views/revision/task/dashboard.html.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/dashboard.html.twig
@@ -46,8 +46,9 @@
                         Export <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ path('emsco_task_ajax_datatable_excel', routeParams|merge({'tab': currentTab}) ) }}">Excel</a></li>
-                        <li><a href="{{ path('emsco_task_ajax_datatable_csv', routeParams|merge({'tab': currentTab}) ) }}">CSV</a></li>
+                        {% for exportFormat, exportUrl in table.exportUrls %}
+                            <li><a href="{{ exportUrl }}">{{ exportFormat }}</a></li>
+                        {% endfor %}
                     </ul>
                 </div>
             {% endif %}
