refactor: rename + adjustments on view

--- a/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
@@ -7,11 +7,9 @@
     <div class="row">
         <div class="col-md-12">
             <div class="box box-solid">
-                <div class="box-body no-padding">
-                    <ol class="nested-sortable vertical" id="root-list" data-nested-max-level="15" data-nested-is-tree="true">
+                    <ol class="vertical" id="root-list" data-nested-max-level="15" data-nested-is-tree="true">
                             {% include "@EMSCore/user/permissions/specific-permissions-field.html.twig" %}
                     </ol>
-                </div>
             </div>
         </div>
     </div>
