--- a/EMS/core-bundle/src/Resources/views/revision/task/dashboard.html.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/dashboard.html.twig
@@ -76,9 +76,7 @@
                     <div class="col-md-12">
                         <input type="hidden" name="tab" value="{{ currentTab }}" />
                         <div class="btn-group">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fa fa-search" aria-hidden="true"></i>  {{ 'task.filter.submit'|trans }}
-                            </button>
+                            {{ form_widget(filterForm.submit, { 'attr': { 'class': 'btn btn-primary' } }) }}
                             <a href="{{ path(route, app.request.get('_route_params')|merge({ 'tab': currentTab }) ) }}"  class="btn btn-default">
                                 <i class="fa fa-remove" aria-hidden="true"></i>  {{ 'task.filter.reset'|trans }}
                             </a>
