--- a/EMS/core-bundle/src/Resources/views/user/permissions/permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions/permissions.html.twig
@@ -11,20 +11,6 @@
                 <div class="box-header with-border">
                     <i class="fa fa-sitemap"></i>
                     <h3 class="box-title">Permissions of content types</h3>
-
-                    <div class="modal fade" id="content_type_modal_reorder" tabindex="-1" role="dialog" aria-labelledby="myModalReorder">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title" id="myModalReorderLabel">
-                                        <strong>Reorder Content Types</strong>
-                                    </h4>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body">
@@ -37,21 +23,25 @@
                                 <th>{{ 'view.user.permissions.table_headers.view'|trans }}</th>
                                 <th>Create</th>
                                 <th>Edit</th>
-                                <th>Specif. Roles</th>
                                 <th>Publish</th>
                                 <th>Delete</th>
                                 <th>Trash</th>
                                 <th>Archive</th>
                                 <th>Show link create</th>
                                 <th>Show link search</th>
+                                <th>Specif. Roles</th>
                             </tr>
                             {% for contentType in emsco_get_content_types() %}
                                 <tr class="text-{{ contentType.color }}">
                                     <td class="text-center">{{ contentType.name }}</td>
                                     <td class="text-center"><i class="{% if contentType.icon %}{{ contentType.icon }}{% else %}fa fa-book{% endif %}"></i></td>
-                                    <td>{{ contentType.roles.view|trans }}</td>
-                                    <td>{{ contentType.roles.create|trans }}</td>
-                                    <td>{{ contentType.roles.edit|trans }}</td>
+                                    {% for role in [contentType.roles.view, contentType.roles.create, contentType.roles.edit, contentType.roles.publish, contentType.roles.delete, contentType.roles.trash, contentType.roles.archive, contentType.roles.show_link_create, contentType.roles.show_link_search] %}
+                                        {% if role == 'not-defined' %}
+                                            <td class="text-muted">{{ role|trans }}</td>
+                                        {% else %}
+                                            <td>{{ role|trans }}</td>
+                                        {% endif %}
+                                    {% endfor %}
                                     <td>
                                         <div class="btn-group">
                                             {% if contentTypeCounts[contentType.id] != 0 %}
@@ -63,20 +53,154 @@
                                             {% endif %}
                                         </div>
                                     </td>
-                                    <td>{{ contentType.roles.publish|trans }}</td>
-                                    <td>{{ contentType.roles.delete|trans }}</td>
-                                    <td>{{ contentType.roles.trash|trans }}</td>
-                                    <td>{{ contentType.roles.archive|trans }}</td>
-                                    <td>{{ contentType.roles.show_link_create|trans }}</td>
-                                    <td>{{ contentType.roles.show_link_search|trans }}</td>
                                 </tr>
                             {% endfor %}
+
                             </tbody>
                         </table>
                     </div>
-
                 </div>
                 <!-- /.box-body -->
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="box ">
+                <div class="box-header with-border">
+                    <i class="fa fa-group"></i>
+                    <h3 class="box-title">Roles hierarchy</h3>
+                </div>
+                <div class="box-body">
+                    <div class="table-responsive">
+                        <p>Access to a role implies access to all roles below it in the hierarchy. Hierarchical roles can be assigned to grant and limit access to the content type.</p>
+                        <table class="table table-condensed table-striped">
+                            <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Role</th>
+                                <th>Description</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>{{ 'ROLE_USER'|trans }}</td>
+                                <td>User has basic access.</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>{{ 'ROLE_AUTHOR'|trans }}</td>
+                                <td>Author can create and edit content.</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>{{ 'ROLE_REVIEWER'|trans }}</td>
+                                <td>Reviewer role for reviewing content.</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>{{ 'ROLE_TRADUCTOR'|trans }}</td>
+                                <td>Traductor role for translating content.</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>{{ 'ROLE_AUDITOR'|trans }}</td>
+                                <td>Auditor role for auditing content.</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>{{ 'ROLE_COPYWRITER'|trans }}</td>
+                                <td>Copywriter role for writing content.</td>
+                            </tr>
+                            <tr>
+                                <td>9</td>
+                                <td>{{ 'ROLE_PUBLISHER'|trans }}</td>
+                                <td>Publisher role for publishing content.</td>
+                            </tr>
+                            <tr>
+                                <td>10</td>
+                                <td>{{ 'ROLE_WEBMASTER'|trans }}</td>
+                                <td>Webmaster role for managing website.</td>
+                            </tr>
+                            <tr>
+                                <td>11</td>
+                                <td>{{ 'ROLE_ADMIN'|trans }}</td>
+                                <td>Admin role for administrative tasks.</td>
+                            </tr>
+                            <tr>
+                                <td>12</td>
+                                <td>{{ 'ROLE_SUPER_ADMIN'|trans }}</td>
+                                <td>Super Admin role for all functionalities.</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="box ">
+                <div class="box-header with-border">
+                    <i class="fa fa-group"></i>
+                    <h3 class="box-title">Roles for specific functionalities</h3>
+                </div>
+                <div class="box-body">
+                    <div class="table-responsive">
+                        <p>These roles are specifically for functionality and have nothing to do with content management. They are functional roles that grant access to specific CMS features.</p>
+                        <table class="table table-condensed table-striped">
+                            <thead>
+                            <tr>
+                                <th>Role</th>
+                                <th>Description</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>{{ 'ROLE_API'|trans }}</td>
+                                <td>API role for accessing basic functionalities.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_FORM_CRM'|trans }}</td>
+                                <td>Form CRM grants access to the mini CRM management tool included in the CMS.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_TASK_MANAGER'|trans }}</td>
+                                <td>Task Manager role for managing tasks.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_ALLOW_ALIGN'|trans }}</td>
+                                <td>Align environment grants access to a tool that allows bulk publishing of various documents.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_USER_MANAGEMENT'|trans }}</td>
+                                <td>User Management role for managing users.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_COPY_PASTE'|trans }}</td>
+                                <td>Copy/Paste role for copying and pasting content on documents.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_DEFAULT_SEARCH'|trans }}</td>
+                                <td>Default Search role for default search functionality.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_SUPER_USER'|trans }}</td>
+                                <td>Super User role for super user functionalities.</td>
+                            </tr>
+                            <tr>
+                                <td>{{ 'ROLE_USER_READ'|trans }}</td>
+                                <td>User Read role for reading user data.</td>
+                            </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
