--- a/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
@@ -1,12 +1,68 @@
 {% extends '@EMSCore/base.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
 
 {% block title %} {{ 'Specific roles of fields - Content type :  "%content_type%"'|trans({'%content_type%': contentType.singularName }) }}{% endblock %}
-{% block pagetitle %}{{ 'Specific roles of fields - Content type :  "%content_type%"'|trans({'%content_type%': contentType.singularName }) }}{% endblock %}
+{% block pagetitle %}  <a href="{{ path('user.permissions') }}" class="btn btn-default"><i class="fa fa-arrow-left"></i> Back</a>{% endblock %}
+
+{% block breadcrumb %}
+    <ol class="breadcrumb">
+        <li><a href="{{ path("user.permissions") }}"><i class="fa fa-cubes"></i> Permissions Overview</a></li>
+        <li class="active">specific roles</li>
+    </ol>
+{% endblock %}
 
 {% block body %}
     <div class="row">
         <div class="col-md-12">
+            <div class="box ">
+                <div class="box-header with-border">
+                    <i class="fa fa-sitemap"></i>
+                    <h3 class="box-title">Permissions Overview</h3>
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                    <div class="table-responsive">
+                        <table class="table table-condensed table-striped">
+                            <tbody>
+                            <tr>
+                                <th class="text-center" style="width: 10px">Content Type</th>
+                                <th class="text-center" style="width: 20px">Icon</th>
+                                <th>{{ 'view.user.permissions.table_headers.view'|trans }}</th>
+                                <th>Create</th>
+                                <th>Edit</th>
+                                <th>Publish</th>
+                                <th>Delete</th>
+                                <th>Trash</th>
+                                <th>Archive</th>
+                                <th>Show link create</th>
+                                <th>Show link search</th>
+                            </tr>
+                                <tr class="text-{{ contentType.color }}">
+                                    <td class="text-center">{{ contentType.name }}</td>
+                                    <td class="text-center"><i class="{% if contentType.icon %}{{ contentType.icon }}{% else %}fa fa-book{% endif %}"></i></td>
+                                    {% for role in [contentType.roles.view, contentType.roles.create, contentType.roles.edit, contentType.roles.publish, contentType.roles.delete, contentType.roles.trash, contentType.roles.archive, contentType.roles.show_link_create, contentType.roles.show_link_search] %}
+                                        {% if role == 'not-defined' %}
+                                            <td class="text-muted">{{ role|trans }}</td>
+                                        {% else %}
+                                            <td>{{ role|trans }}</td>
+                                        {% endif %}
+                                    {% endfor %}
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
             <div class="box box-solid">
+                <div class="box-header with-border">
+                    <i class="fa fa-group"></i>
+                    <h3 class="box-title">Specific roles of fields</h3>
+                </div>
                     <ol class="vertical" id="root-list" data-nested-max-level="15" data-nested-is-tree="true">
                             {% include "@EMSCore/user/permissions/specific-permissions-field.html.twig" %}
                     </ol>
