fix: (or not) ensure that attribute are correctly encoded

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/helpers.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/helpers.html.twig
@@ -6,7 +6,7 @@
         {%- elseif attrvalue is same as(true) -%}
             {{- attrname }}="{{ attrname }}"
         {%- elseif attrvalue is not same as(false) -%}
-            {{- attrname }}="{{ attrvalue }}"
+            {{- attrname }}="{{ attrvalue|e('html_attr') }}"
         {%- endif -%}
     {%- endfor -%}
 {%- endblock attributes -%}
