--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/revisions-data.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/revisions-data.html.twig
@@ -111,6 +111,7 @@
 
 {% block revisionSidebar %}
 	{% set tabs = [{name: 'tab_about_revision', label: 'views.data.revisions-data-html.revision'|trans}] %}
+
 	{% if revision.tasksEnabled %}
 		{% set tabs = tabs|merge([{ name: 'tab_tasks', label: 'task.tab_tasks'|trans }]) %}
 	{% endif %}
@@ -210,7 +211,7 @@
 {% block revisionTabTasks %}
 	<div id="revision-tasks"
 		 data-load="{{ revision.hasTasks ? "true" : "false" }}"
-		 data-url="{{ path('ems_core_task_ajax_tasks', {'revisionId': revision.id }) }}">
+		 data-url="{{ path('emsco_task_ajax_tasks', {'revisionOuuid': revision.ouuid }) }}">
 		<div id="revision-tasks-loading" class="task-loading"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></div>
 		<div id="revision-tasks-content">{# ajax loaded#}</div>
 	</div>
