--- a/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
@@ -1,12 +1,11 @@
 {% extends '@EMSCore/base.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
 
-{% block title %} {{ 'Specific roles of fields - Content type :  "%content_type%"'|trans({'%content_type%': contentType.singularName }) }}{% endblock %}
-{% block pagetitle %}  <a href="{{ path('user.permissions') }}" class="btn btn-default"><i class="fa fa-arrow-left"></i> Back</a>{% endblock %}
+{% block pagetitle %}  <a href="{{ path('user.permissions') }}" class="btn btn-default"><i class="fa fa-arrow-left"></i>{{ 'view.user.specific_permissions.back'|trans }}</a>{% endblock %}
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li><a href="{{ path("user.permissions") }}"><i class="fa fa-cubes"></i> Permissions Overview</a></li>
-        <li class="active">specific roles</li>
+        <li><a href="{{ path("user.permissions") }}"><i class="fa fa-cubes"></i>{{ 'view.user.specific_permissions.breadcrumb.permission_overview'|trans }}</a></li>
+        <li class="active">{{ 'view.user.specific_permissions.breadcrumb.specific_role'|trans }}</li>
     </ol>
 {% endblock %}
 
@@ -16,9 +15,8 @@
             <div class="box ">
                 <div class="box-header with-border">
                     <i class="fa fa-sitemap"></i>
-                    <h3 class="box-title">Permissions Overview</h3>
+                    <h3 class="box-title">{{ 'view.user.specific_permissions.titles.permissions_overview'|trans }}</h3>
                 </div>
-                <!-- /.box-header -->
                 <div class="box-body">
                     <div class="table-responsive">
                         <table class="table table-condensed table-striped">
@@ -27,31 +25,28 @@
                                 <th class="text-center" style="width: 10px">Content Type</th>
                                 <th class="text-center" style="width: 20px">Icon</th>
                                 <th>{{ 'view.user.permissions.table_headers.view'|trans }}</th>
-                                <th>Create</th>
-                                <th>Edit</th>
-                                <th>Publish</th>
-                                <th>Delete</th>
-                                <th>Trash</th>
-                                <th>Archive</th>
-                                <th>Show link create</th>
-                                <th>Show link search</th>
+                                <th>{{ 'view.user.permissions.table_headers.create'|trans }}</th>
+                                <th>{{ 'view.user.permissions.table_headers.edit'|trans }}</th>
+                                <th>{{ 'view.user.permissions.table_headers.publish'|trans }}</th>
+                                <th>{{ 'view.user.permissions.table_headers.delete'|trans }}</th>
+                                <th>{{ 'view.user.permissions.table_headers.trash'|trans }}</th>
+                                <th>{{ 'view.user.permissions.table_headers.archive'|trans }}</th>
+                                <th>{{ 'view.user.permissions.table_headers.show_link_create'|trans }}</th>
+                                <th>{{ 'view.user.permissions.table_headers.show_link_search'|trans }}</th>
                             </tr>
                                 <tr class="text-{{ contentType.color }}">
                                     <td class="text-center">{{ contentType.name }}</td>
-                                    <td class="text-center"><i class="{% if contentType.icon %}{{ contentType.icon }}{% else %}fa fa-book{% endif %}"></i></td>
+                                    <td class="text-center"><i class="{{ contentType.icon|default('fa fa-book') }}"></i></td>
                                     {% for role in [contentType.roles.view, contentType.roles.create, contentType.roles.edit, contentType.roles.publish, contentType.roles.delete, contentType.roles.trash, contentType.roles.archive, contentType.roles.show_link_create, contentType.roles.show_link_search] %}
-                                        {% if role == 'not-defined' %}
-                                            <td class="text-muted">{{ role|trans }}</td>
-                                        {% else %}
-                                            <td>{{ role|trans }}</td>
-                                        {% endif %}
+                                    <td class="{{ html_classes({'text-muted': role == 'not-defined'}) }} ">
+                                        {{ role|trans }}
+                                    </td>
                                     {% endfor %}
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <!-- /.box-body -->
             </div>
         </div>
     </div>
@@ -61,7 +56,7 @@
             <div class="box box-solid">
                 <div class="box-header with-border">
                     <i class="fa fa-group"></i>
-                    <h3 class="box-title">Specific roles of fields</h3>
+                    <h3 class="box-title">{{ 'view.user.specific_permissions.titles.specific_roles'|trans }}</h3>
                 </div>
                     <ol class="vertical" id="root-list" data-nested-max-level="15" data-nested-is-tree="true">
                             {% include "@EMSCore/user/permissions/specific-permissions-field.html.twig" %}
